--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -3,6 +3,14 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+
+body {
+    padding-left: 4px;
+    padding-top: 4px;
 }
 
 .app {
@@ -13,8 +21,9 @@ html, body {
 }
 
 .toolbar {
-    height: 50px;
+    height: 40px;
     display: flex;
+    align-items: center;
 }
 
 .searchInput {
@@ -22,7 +31,35 @@ html, body {
     width: 100%;
 }
 
+.headers {
+    flex-shrink: 0;
+    height: 26px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.header {
+    font-weight: bold;
+}
+
 .list {
     height: 100%;
     width: 100%;
+}
+
+.hash {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.dataRow {
+    display: flex;
+    flex-wrap: nowrap;
+    cursor: default;
+}
+
+.dataCell {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
