Add revision data display for selected blame row

--- a/src/renderer/blame/styles.css
+++ b/src/renderer/blame/styles.css
@@ -1,7 +1,6 @@
 :root {
-    --secondary-color: rgb(197, 197, 197);
-    --row-hover-bg-color: rgb(212, 235, 242);
-    --row-selected-bg-color: rgb(139, 186, 194);
+    --blame-row-hover-bg-color: rgb(212, 235, 242);
+    --blame-row-selected-bg-color: rgb(139, 186, 194);
 }
 
 html, body, #root {
@@ -80,9 +79,9 @@ html, body, #root {
 .blameFileLine.hovered:not(.selected) .blameLineMetadata,
 .blameFileLine:hover .blameLineContent,
 .blameFileLine.hovered .blameLineContent {
-    background-color: var(--row-hover-bg-color);
+    background-color: var(--blame-row-hover-bg-color);
 }
 
 .blameFileLine.selected .blameLineMetadata, .blameFileLine.selected .blameLineContent {
-    background-color: var(--row-selected-bg-color);
+    background-color: var(--blame-row-selected-bg-color);
 }
